add gpu version compile

--- a/Methods/Makefile
+++ b/Methods/Makefile
@@ -1,16 +1,24 @@
 CC = g++
-FLAG = -Wall -O2
+CFLAG = -Wall -O2
+GCC = nvcc
+GFLAG = -arch=sm_20 --ptxas-options="-dlcm=cg"
 
-all: forward edgeIterator bruteForce
+all: forward edgeIterator bruteForce g_forward g_edgeIterator
 
-forward:
-	$(CC) Forward/forward.cpp $(FLAG) -o forward
+forward: Forward/forward.cpp
+	$(CC) Forward/forward.cpp $(CFLAG) -o forward
 
-edgeIterator:
-	$(CC) EdgeIterator/edgeIterator.cpp $(FLAG) -o edgeIterator
+g_forward: Forward/forward.cu
+	$(GCC) Forward/forward.cu $(GFLAG) -Xcompiler $(CFLAG) -o g_forward
 
-bruteForce:
-	$(CC) BruteForce/bruteForce.cpp $(FLAG) -o bruteForce
+edgeIterator: EdgeIterator/edgeIterator.cpp
+	$(CC) EdgeIterator/edgeIterator.cpp $(CFLAG) -o edgeIterator
+
+g_edgeIterator: EdgeIterator/edgeIterator.cu
+	$(GCC) EdgeIterator/edgeIterator.cu $(GFLAG) -Xcompiler $(CFLAG) -o g_edgeIterator
+
+bruteForce: BruteForce/bruteForce.cpp
+	$(CC) BruteForce/bruteForce.cpp $(CFLAG) -o bruteForce
 
 clean:
-	rm -rf forward edgeIterator bruteForce
+	rm -rf forward edgeIterator bruteForce g_forward g_edgeIterator
