fix makefile bug

--- a/Algorithm/Makefile
+++ b/Algorithm/Makefile
@@ -24,10 +24,10 @@ all: count proc
 cardInfo: ../Tools/gpuCardInfo.cu
 	$(NVCC) $^ -o $@
 
-count: $(filter-out $(OBJ_DIR)main.o, $(obj))
+count: $(filter-out $(OBJ_DIR)procedure.o, $(obj))
 	$(NVCC) $^ -Xcompiler "$(FLAG)" -o $@
 
-proc: $(filter-out $(OBJ_DIR)procedure.o, $(obj))
+proc: $(filter-out $(OBJ_DIR)main.o, $(obj))
 	$(NVCC) $^ -Xcompiler "$(FLAG)" -o $@
 
 $(cudaObj): $(OBJ_DIR)g_%.o: %.cu
