--- a/Algorithm/Makefile
+++ b/Algorithm/Makefile
@@ -1,5 +1,5 @@
 GCC = g++
-FLAG = -Wall -O2 -lpthread -fopenmp
+FLAG = -Wall -O2 -fopenmp
 NVCC = nvcc
 GPU_FLAG = -gencode arch=compute_20,code=sm_20 -gencode arch=compute_35,code=sm_35 -gencode arch=compute_52,code=sm_52
 #GPU_FLAG = -gencode arch=compute_20,code=sm_20 -gencode arch=compute_30,code=sm_30 -gencode arch=compute_35,code=sm_35 -gencode arch=compute_52,code=sm_52
